# AI_Finance

./: .gitignore  AI-Finance-Simulator.spec  Idea.md  README.md  ai_finance.spec  pyproject.toml
.github/workflows/: build.yml  ci.yml
config/: ai_players.yaml  modules.yaml  system.yaml
config/prompts/: system_prompt.txt  trading_rules.txt
src/: main.py
src/auxiliary/logging_/: manager.py
src/auxiliary/report/: generator.py
src/auxiliary/snapshot/: manager.py
src/auxiliary/version_control/: manager.py
src/business/ai_adapter/: context_compressor.py
src/business/contest/: manager.py
src/business/data_fetcher/sources/: base.py  free_sources.py
src/business/loan/: manager.py
src/business/scheduler/: backtest.py  scheduler.py
src/core/: constants.py  enums.py
src/core/account/: manager.py  models.py
src/core/risk/: engine.py
src/core/risk/rules/: __init__.py  base.py  concentration.py  daily_loss.py  drawdown.py  extreme_market.py  frequency.py
src/core/trade_executor/: fee_calculator.py
src/core/trade_validator/: models.py  validator.py
src/core/types/: __init__.py  event_bus.py  result.py
src/core/wal/: integrity.py  manager.py  recovery.py
src/gui/: bridge.py  main_window.py
src/infrastructure/config/: manager.py  models.py
src/infrastructure/crypto_/: manager.py
src/infrastructure/module_manager/: proxy.py  registry.py
src/infrastructure/storage/: database.py  models.py  repository.py
tests/: conftest.py
tests/integration/: test_flows.py
tests/unit/: test_account.py  test_ai_adapter.py  test_auxiliary.py  test_config.py  test_contest.py  test_crypto.py  test_enums_constants.py  test_gui.py  test_module_manager.py  test_risk.py  test_storage.py  test_trade_executor_and_loan.py  test_trade_validator.py  test_types.py  test_wal.py
